--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
   <main class="container">
     <div class="buscador">
-      <h1>Busca CEP</h1>´
+      <h1>Busca CEP</h1>
       <form action="">
         <label for="cep">CEP</label>
-        <input type="number" name="cep" id="cep" max-length="8">
+        <input type="number" name="cep" id="cep" placeholder="12345678">
         <button id="buscarCep">Buscar Cep</button>
       </form>
 
